# sane-rss

./: .gitignore  Cargo.toml  GOALS.md  README.md
config/: sample.toml
src/: config.rs  feed.rs  filter.rs  lib.rs  llm.rs  main.rs  poller.rs  server.rs  storage.rs
