[package]
name = "sane-rss"
version = "2.0.0"
authors = ["Andre Braga Reis <andre@brg.rs>"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8"
futures = "0.3"
llm = { version = "1.3.4", features = ["logging", "anthropic", "openai", "google"] }
reqwest = { version = "0.12", features = ["json"] }
rss = "2.0"
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3.18"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
